--- a/set_alarm.html
+++ b/set_alarm.html
@@ -14,9 +14,9 @@
             <input type="date" id="alarm-date" class="huge">
             <input type="time" id="alarm-time" class="huge">
             <select id="alarm-tone" class="huge">
-                <option value="tone1">Tone 1</option>
-                <option value="tone2">Tone 2</option>
-                <option value="tone3">Tone 3</option>
+                <option value="tone1.mp3">Tone 1</option>
+                <option value="tone2.mp3">Tone 2</option>
+                <option value="tone3.mp3">Tone 3</option>
             </select>
             <button id="set-alarm-time-btn" class="button">Set Alarm Time</button>
         </div>
